--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@zeit/next-sass": "^1.0.1",
     "antd": "^4.16.12",
     "axios": "^0.23.0",
-    "cookie": "^0.4.1",
+    "js-cookie": "^3.0.1",
     "crypto-js": "^4.1.1",
     "lodash": "^4.17.21",
     "next": "11.1.2",
@@ -33,7 +33,7 @@
     "@types/react-redux": "^7.1.18",
     "eslint": "8.0.1",
     "eslint-config-next": "11.1.2",
-    "react-cookies": "^0.1.1",
+    "@types/js-cookie": "^3.0.1",
     "typescript": "4.4.4"
   }
 }
