--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "publish": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,8 +14,8 @@
     "@zeit/next-sass": "^1.0.1",
     "antd": "^4.16.12",
     "axios": "^0.23.0",
-    "js-cookie": "^3.0.1",
     "crypto-js": "^4.1.1",
+    "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "next": "11.1.2",
     "next-redux-wrapper": "^7.0.2",
@@ -28,12 +29,12 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.0.2",
+    "@types/js-cookie": "^3.0.1",
     "@types/lodash": "^4.14.172",
     "@types/react": "17.0.30",
     "@types/react-redux": "^7.1.18",
     "eslint": "8.0.1",
     "eslint-config-next": "11.1.2",
-    "@types/js-cookie": "^3.0.1",
     "typescript": "4.4.4"
   }
 }
