--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,7 +67,8 @@ jobs:
 
       # tar
       - name: Tar dist
-        run:
+        run:|
+          ls
           tar zcf build.tar.gz build package.json package-lock.json next.config.js static
 
           # Deploy to server
