--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Tar dist
         run: |
           ls
-          tar zcf build.tar.gz build package.json package-lock.json next.config.js styles
+          tar zcf build.tar.gz build package.json package-lock.json next.config.js
 
           # Deploy to server
       - name: Deploy to server
